// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`StationDetail matches snapshot for CTA station 1`] = `
<div>
  <div>
    <div
      class="grid grid-cols-1 gap-4 sm:grid-cols-2 lg:grid-cols-3"
    >
      <div
        class="rounded-xl border border-gray-100 bg-white dark:border-gray-700 dark:bg-gray-900 p-5 shadow-sm"
      >
        <h2
          class="mb-4 text-xs font-semibold uppercase tracking-widest text-gray-400 dark:text-gray-500"
        >
          Location
        </h2>
        <div
          class="flex items-start justify-between gap-4 py-2 border-b border-gray-50 dark:border-gray-800 last:border-0"
        >
          <span
            class="text-sm text-gray-500 dark:text-gray-400 shrink-0"
          >
            Address
          </span>
          <span
            class="text-sm font-medium text-gray-900 dark:text-white text-right"
          >
            100 W Lake St, Chicago, IL
          </span>
        </div>
        <div
          class="flex items-start justify-between gap-4 py-2 border-b border-gray-50 dark:border-gray-800 last:border-0"
        >
          <span
            class="text-sm text-gray-500 dark:text-gray-400 shrink-0"
          >
            Municipality
          </span>
          <span
            class="text-sm font-medium text-gray-900 dark:text-white text-right"
          >
            Chicago
          </span>
        </div>
        <div
          class="flex items-start justify-between gap-4 py-2 border-b border-gray-50 dark:border-gray-800 last:border-0"
        >
          <span
            class="text-sm text-gray-500 dark:text-gray-400 shrink-0"
          >
            Coordinates
          </span>
          <span
            class="text-sm font-medium text-gray-900 dark:text-white text-right"
          >
            41.88570, -87.63180
          </span>
        </div>
      </div>
      <div
        class="rounded-xl border border-gray-100 bg-white dark:border-gray-700 dark:bg-gray-900 p-5 shadow-sm"
      >
        <h2
          class="mb-4 text-xs font-semibold uppercase tracking-widest text-gray-400 dark:text-gray-500"
        >
          Service
        </h2>
        <div
          class="flex items-start justify-between gap-4 py-2 border-b border-gray-50 dark:border-gray-800 last:border-0"
        >
          <span
            class="text-sm text-gray-500 dark:text-gray-400 shrink-0"
          >
            Station Type
          </span>
          <span
            class="text-sm font-medium text-gray-900 dark:text-white text-right"
          >
            Subway
          </span>
        </div>
        <div
          class="flex items-start justify-between gap-4 py-2 border-b border-gray-50 dark:border-gray-800 last:border-0"
        >
          <span
            class="text-sm text-gray-500 dark:text-gray-400 shrink-0"
          >
            Terminal
          </span>
          <span
            class="text-sm font-medium text-gray-900 dark:text-white text-right"
          >
            <span
              class="inline-flex items-center gap-1 text-sm font-medium text-gray-400"
            >
              <span
                class="h-1.5 w-1.5 rounded-full bg-gray-300"
              />
               No
            </span>
          </span>
        </div>
        <div
          class="flex items-start justify-between gap-4 py-2 border-b border-gray-50 dark:border-gray-800 last:border-0"
        >
          <span
            class="text-sm text-gray-500 dark:text-gray-400 shrink-0"
          >
            24-Hour Service
          </span>
          <span
            class="text-sm font-medium text-gray-900 dark:text-white text-right"
          >
            <span
              class="inline-flex items-center gap-1 text-sm font-medium text-green-600"
            >
              <span
                class="h-1.5 w-1.5 rounded-full bg-green-500"
              />
               Yes
            </span>
          </span>
        </div>
        <div
          class="flex items-start justify-between gap-4 py-2 border-b border-gray-50 dark:border-gray-800 last:border-0"
        >
          <span
            class="text-sm text-gray-500 dark:text-gray-400 shrink-0"
          >
            Weekday Hours
          </span>
          <span
            class="text-sm font-medium text-gray-900 dark:text-white text-right"
          >
            24 hours
          </span>
        </div>
        <div
          class="flex items-start justify-between gap-4 py-2 border-b border-gray-50 dark:border-gray-800 last:border-0"
        >
          <span
            class="text-sm text-gray-500 dark:text-gray-400 shrink-0"
          >
            Saturday Hours
          </span>
          <span
            class="text-sm font-medium text-gray-900 dark:text-white text-right"
          >
            24 hours
          </span>
        </div>
        <div
          class="flex items-start justify-between gap-4 py-2 border-b border-gray-50 dark:border-gray-800 last:border-0"
        >
          <span
            class="text-sm text-gray-500 dark:text-gray-400 shrink-0"
          >
            Sunday Hours
          </span>
          <span
            class="text-sm font-medium text-gray-900 dark:text-white text-right"
          >
            24 hours
          </span>
        </div>
      </div>
      <div
        class="rounded-xl border border-gray-100 bg-white dark:border-gray-700 dark:bg-gray-900 p-5 shadow-sm"
      >
        <h2
          class="mb-4 text-xs font-semibold uppercase tracking-widest text-gray-400 dark:text-gray-500"
        >
          Accessibility
        </h2>
        <div
          class="flex items-start justify-between gap-4 py-2 border-b border-gray-50 dark:border-gray-800 last:border-0"
        >
          <span
            class="text-sm text-gray-500 dark:text-gray-400 shrink-0"
          >
            ADA Accessible
          </span>
          <span
            class="text-sm font-medium text-gray-900 dark:text-white text-right"
          >
            <span
              class="inline-flex items-center gap-1 text-sm font-medium text-green-600"
            >
              <span
                class="h-1.5 w-1.5 rounded-full bg-green-500"
              />
               Yes
            </span>
          </span>
        </div>
        <div
          class="flex items-start justify-between gap-4 py-2 border-b border-gray-50 dark:border-gray-800 last:border-0"
        >
          <span
            class="text-sm text-gray-500 dark:text-gray-400 shrink-0"
          >
            Elevator
          </span>
          <span
            class="text-sm font-medium text-gray-900 dark:text-white text-right"
          >
            <span
              class="inline-flex items-center gap-1 text-sm font-medium text-green-600"
            >
              <span
                class="h-1.5 w-1.5 rounded-full bg-green-500"
              />
               Yes
            </span>
          </span>
        </div>
        <div
          class="flex items-start justify-between gap-4 py-2 border-b border-gray-50 dark:border-gray-800 last:border-0"
        >
          <span
            class="text-sm text-gray-500 dark:text-gray-400 shrink-0"
          >
            Escalator
          </span>
          <span
            class="text-sm font-medium text-gray-900 dark:text-white text-right"
          >
            <span
              class="inline-flex items-center gap-1 text-sm font-medium text-green-600"
            >
              <span
                class="h-1.5 w-1.5 rounded-full bg-green-500"
              />
               Yes
            </span>
          </span>
        </div>
        <div
          class="flex items-start justify-between gap-4 py-2 border-b border-gray-50 dark:border-gray-800 last:border-0"
        >
          <span
            class="text-sm text-gray-500 dark:text-gray-400 shrink-0"
          >
            Parking
          </span>
          <span
            class="text-sm font-medium text-gray-900 dark:text-white text-right"
          >
            <span
              class="inline-flex items-center gap-1 text-sm font-medium text-gray-400"
            >
              <span
                class="h-1.5 w-1.5 rounded-full bg-gray-300"
              />
               No
            </span>
          </span>
        </div>
        <div
          class="mt-3 flex flex-wrap gap-1.5"
        >
          <span
            class="rounded bg-gray-100 dark:bg-gray-800 px-2 py-0.5 text-xs text-gray-600 dark:text-gray-400 capitalize"
          >
            fare vending
          </span>
          <span
            class="rounded bg-gray-100 dark:bg-gray-800 px-2 py-0.5 text-xs text-gray-600 dark:text-gray-400 capitalize"
          >
            seating
          </span>
        </div>
      </div>
      <div
        class="rounded-xl border border-gray-100 bg-white dark:border-gray-700 dark:bg-gray-900 p-5 shadow-sm"
      >
        <h2
          class="mb-4 text-xs font-semibold uppercase tracking-widest text-gray-400 dark:text-gray-500"
        >
          System IDs
        </h2>
        <div
          class="flex items-start justify-between gap-4 py-2 border-b border-gray-50 dark:border-gray-800 last:border-0"
        >
          <span
            class="text-sm text-gray-500 dark:text-gray-400 shrink-0"
          >
            CTA Map ID
          </span>
          <span
            class="text-sm font-medium text-gray-900 dark:text-white text-right"
          >
            40380
          </span>
        </div>
        <div
          class="flex items-start justify-between gap-4 py-2 border-b border-gray-50 dark:border-gray-800 last:border-0"
        >
          <span
            class="text-sm text-gray-500 dark:text-gray-400 shrink-0"
          >
            CTA Stop ID
          </span>
          <span
            class="text-sm font-medium text-gray-900 dark:text-white text-right"
          >
            30074
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`StationDetail matches snapshot for Metra station 1`] = `
<div>
  <div>
    <div
      class="grid grid-cols-1 gap-4 sm:grid-cols-2 lg:grid-cols-3"
    >
      <div
        class="rounded-xl border border-gray-100 bg-white dark:border-gray-700 dark:bg-gray-900 p-5 shadow-sm"
      >
        <h2
          class="mb-4 text-xs font-semibold uppercase tracking-widest text-gray-400 dark:text-gray-500"
        >
          Location
        </h2>
        <div
          class="flex items-start justify-between gap-4 py-2 border-b border-gray-50 dark:border-gray-800 last:border-0"
        >
          <span
            class="text-sm text-gray-500 dark:text-gray-400 shrink-0"
          >
            Address
          </span>
          <span
            class="text-sm font-medium text-gray-900 dark:text-white text-right"
          >
            233 N Broadway, Aurora, IL
          </span>
        </div>
        <div
          class="flex items-start justify-between gap-4 py-2 border-b border-gray-50 dark:border-gray-800 last:border-0"
        >
          <span
            class="text-sm text-gray-500 dark:text-gray-400 shrink-0"
          >
            Municipality
          </span>
          <span
            class="text-sm font-medium text-gray-900 dark:text-white text-right"
          >
            Aurora
          </span>
        </div>
        <div
          class="flex items-start justify-between gap-4 py-2 border-b border-gray-50 dark:border-gray-800 last:border-0"
        >
          <span
            class="text-sm text-gray-500 dark:text-gray-400 shrink-0"
          >
            Coordinates
          </span>
          <span
            class="text-sm font-medium text-gray-900 dark:text-white text-right"
          >
            41.76060, -88.32010
          </span>
        </div>
        <div
          class="flex items-start justify-between gap-4 py-2 border-b border-gray-50 dark:border-gray-800 last:border-0"
        >
          <span
            class="text-sm text-gray-500 dark:text-gray-400 shrink-0"
          >
            Metra Page
          </span>
          <span
            class="text-sm font-medium text-gray-900 dark:text-white text-right"
          >
            <a
              class="text-blue-600 dark:text-blue-400 hover:underline"
              href="https://metra.com/stations/aurora"
              rel="noopener noreferrer"
              target="_blank"
            >
              View on metra.com ↗
            </a>
          </span>
        </div>
      </div>
      <div
        class="rounded-xl border border-gray-100 bg-white dark:border-gray-700 dark:bg-gray-900 p-5 shadow-sm"
      >
        <h2
          class="mb-4 text-xs font-semibold uppercase tracking-widest text-gray-400 dark:text-gray-500"
        >
          Service
        </h2>
        <div
          class="flex items-start justify-between gap-4 py-2 border-b border-gray-50 dark:border-gray-800 last:border-0"
        >
          <span
            class="text-sm text-gray-500 dark:text-gray-400 shrink-0"
          >
            Station Type
          </span>
          <span
            class="text-sm font-medium text-gray-900 dark:text-white text-right"
          >
            Commuter Rail
          </span>
        </div>
        <div
          class="flex items-start justify-between gap-4 py-2 border-b border-gray-50 dark:border-gray-800 last:border-0"
        >
          <span
            class="text-sm text-gray-500 dark:text-gray-400 shrink-0"
          >
            Terminal
          </span>
          <span
            class="text-sm font-medium text-gray-900 dark:text-white text-right"
          >
            <span
              class="inline-flex items-center gap-1 text-sm font-medium text-green-600"
            >
              <span
                class="h-1.5 w-1.5 rounded-full bg-green-500"
              />
               Yes
            </span>
          </span>
        </div>
        <div
          class="flex items-start justify-between gap-4 py-2 border-b border-gray-50 dark:border-gray-800 last:border-0"
        >
          <span
            class="text-sm text-gray-500 dark:text-gray-400 shrink-0"
          >
            24-Hour Service
          </span>
          <span
            class="text-sm font-medium text-gray-900 dark:text-white text-right"
          >
            <span
              class="inline-flex items-center gap-1 text-sm font-medium text-gray-400"
            >
              <span
                class="h-1.5 w-1.5 rounded-full bg-gray-300"
              />
               No
            </span>
          </span>
        </div>
      </div>
      <div
        class="rounded-xl border border-gray-100 bg-white dark:border-gray-700 dark:bg-gray-900 p-5 shadow-sm"
      >
        <h2
          class="mb-4 text-xs font-semibold uppercase tracking-widest text-gray-400 dark:text-gray-500"
        >
          Accessibility
        </h2>
        <div
          class="flex items-start justify-between gap-4 py-2 border-b border-gray-50 dark:border-gray-800 last:border-0"
        >
          <span
            class="text-sm text-gray-500 dark:text-gray-400 shrink-0"
          >
            ADA Accessible
          </span>
          <span
            class="text-sm font-medium text-gray-900 dark:text-white text-right"
          >
            <span
              class="inline-flex items-center gap-1 text-sm font-medium text-green-600"
            >
              <span
                class="h-1.5 w-1.5 rounded-full bg-green-500"
              />
               Yes
            </span>
          </span>
        </div>
        <div
          class="flex items-start justify-between gap-4 py-2 border-b border-gray-50 dark:border-gray-800 last:border-0"
        >
          <span
            class="text-sm text-gray-500 dark:text-gray-400 shrink-0"
          >
            Parking
          </span>
          <span
            class="text-sm font-medium text-gray-900 dark:text-white text-right"
          >
            <span
              class="inline-flex items-center gap-1 text-sm font-medium text-green-600"
            >
              <span
                class="h-1.5 w-1.5 rounded-full bg-green-500"
              />
               Yes
            </span>
          </span>
        </div>
        <div
          class="mt-3 flex flex-wrap gap-1.5"
        >
          <span
            class="rounded bg-gray-100 dark:bg-gray-800 px-2 py-0.5 text-xs text-gray-600 dark:text-gray-400 capitalize"
          >
            parking
          </span>
        </div>
      </div>
      <div
        class="rounded-xl border border-gray-100 bg-white dark:border-gray-700 dark:bg-gray-900 p-5 shadow-sm"
      >
        <h2
          class="mb-4 text-xs font-semibold uppercase tracking-widest text-gray-400 dark:text-gray-500"
        >
          System IDs
        </h2>
        <div
          class="flex items-start justify-between gap-4 py-2 border-b border-gray-50 dark:border-gray-800 last:border-0"
        >
          <span
            class="text-sm text-gray-500 dark:text-gray-400 shrink-0"
          >
            Metra Stop ID
          </span>
          <span
            class="text-sm font-medium text-gray-900 dark:text-white text-right"
          >
            AURORA
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
